# knowrob_designator

./: CMakeLists.txt  Dockerfile  README.md  package.xml  run_knowrob_designator.sh  setup.py
.github/workflows/: docker-build.yml
action/: DesignatorExecutionFinished.action  DesignatorExecutionStart.action  DesignatorInit.action  DesignatorResolutionFinished.action  DesignatorResolutionStart.action  LogDesignator.action  ObjectDesignator
launch/: knowrob_designator_service.launch
scripts/: DesignatorService.py  designator_parser.py  knowrob_designator_client.py  knowrob_designator_service.py
