<?xml version="1.0"?>
<package format="2">
  <name>knowrob_designator</name>
  <version>0.1.0</version>
  <description>The knowrob_designator package provides a service node for querying semantic information in KnowRob.</description>

  <!-- License -->
  <license>BSD</license>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- Author information -->
  <author email="your_email@example.com">Your Name</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Additional tags -->
  <export>
    <!-- Other tools can add information here -->
  </export>
</package>
